--- a/service-details.html
+++ b/service-details.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Service Details - BizLand Bootstrap Template</title>
+  <title>حور - نقل عفش الكويت | فك تركيب وتغليف 📦 66401171 - تفاصيل الخدمة</title>
   <meta name="description" content="خدمات نقل العفش في الكويت من حور - نقل، فك، تركيب، وتغليف آمن بأحدث الأدوات. فريق مدرب، تغطية شاملة، تواصل معنا 66401171">
   <meta name="keywords" content="نقل عفش الكويت, نقل أثاث الكويت, فك وتركيب أثاث, شركة نقل عفش, Home Mover, تغليف عفش, نقل سريع, 66401171, نقل عفش من الباب للباب, شركة نقل موثوقة الكويت, نقل عفش رخيص, أفضل شركة نقل عفش, خدمات نقل العفش, نقل أثاث محترف, نقل مكاتب, نقل منازل, نقل أجهزة كهربائية, نقل أثاث فاخر, تغليف الأثاث, نقل معدات ثقيلة, نقل بضائع تجارية, نقل شقق صغيرة, نقل الفلل, الكويت">
   <link rel="canonical" href="https://naqlafsha-hoor.com/service-details.html" />
@@ -94,9 +94,7 @@
 
       <div class="container position-relative d-flex align-items-center justify-content-between">
         <a href="index.html" class="logo d-flex align-items-center">
-          <!-- Uncomment the line below if you also wish to use an image logo -->
-          <!-- <img src="assets/img/logo.png" alt=""> -->
-          <h1 class="sitename">BizLand</h1>
+          <img src="assets/img/logo.png" alt="حور - نقل عفش الكويت">
         </a>
 
         <nav id="navmenu" class="navmenu">
@@ -152,44 +150,36 @@
     <!-- Service Details Section -->
     <section id="service-details" class="service-details section">
 
-      <div class="container">
-
+      <div class="container" data-aos="fade-up">
         <div class="row gy-4">
-
-          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
-            <div class="services-list">
-              <a href="#" class="active">Web Design</a>
-              <a href="#">Software Development</a>
-              <a href="#">Product Management</a>
-              <a href="#">Graphic Design</a>
-              <a href="#">Marketing</a>
+          <div class="col-lg-8">
+            <div class="content ps-lg-5">
+              <h3>🧳 خدماتنا ليست مجرد نقل... إنها عناية وتفاصيل</h3>
+              <p>
+                نحن نقدم خدمات نقل عفش متكاملة في الكويت، مع التركيز على الجودة والاحترافية في كل خطوة. خدماتنا تشمل:
+              </p>
+              <ul>
+                <li><i class="bi bi-check-circle-fill"></i> تغليف بأعلى جودة: نستخدم مواد تغليف متينة، بطبقات متعددة من الحماية، لنضمن بقاء كل قطعة سليمة وكأنها لم تتحرك من مكانها.</li>
+                <li><i class="bi bi-check-circle-fill"></i> فك وتركيب باحتراف: نملك أدوات خاصة وعمالاً يعرفون جيدًا أسرار فك الأثاث الخشبي والمعدني وتركيبه دون أي ضرر أو خدش.</li>
+                <li><i class="bi bi-check-circle-fill"></i> سيارات مبطنة ومجهزة: جميع سياراتنا مصممة خصيصًا لنقل العفش، مغلقة من الداخل، ومبطنة لحماية الأغراض من الصدمات والحرارة.</li>
+                <li><i class="bi bi-check-circle-fill"></i> نقل سريع ومنظم: كل عملية نقل تتم بخطة مدروسة، تبدأ بالمعاينة وتنتهي بترتيب الأثاث في موقعك الجديد كما تحب.</li>
+              </ul>
             </div>
-
-            <h4>Enim qui eos rerum in delectus</h4>
-            <p>Nam voluptatem quasi numquam quas fugiat ex temporibus quo est. Quia aut quam quod facere ut non occaecati ut aut. Nesciunt mollitia illum tempore corrupti sed eum reiciendis. Maxime modi rerum.</p>
           </div>
-
-          <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
-            <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
-            <p>
-              Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero. Qui omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
-            </p>
-            <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Aut eum totam accusantium voluptatem.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Assumenda et porro nisi nihil nesciunt voluptatibus.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
-            </ul>
-            <p>
-              Est reprehenderit voluptatem necessitatibus asperiores neque sed ea illo. Deleniti quam sequi optio iste veniam repellat odit. Aut pariatur itaque nesciunt fuga.
-            </p>
-            <p>
-              Sunt rem odit accusantium omnis perspiciatis officia. Laboriosam aut consequuntur recusandae mollitia doloremque est architecto cupiditate ullam. Quia est ut occaecati fuga. Distinctio ex repellendus eveniet velit sint quia sapiente cumque. Et ipsa perferendis ut nihil. Laboriosam vel voluptates tenetur nostrum. Eaque iusto cupiditate et totam et quia dolorum in. Sunt molestiae ipsum at consequatur vero. Architecto ut pariatur autem ad non cumque nesciunt qui maxime. Sunt eum quia impedit dolore alias explicabo ea.
-            </p>
+          <div class="col-lg-4">
+            <div class="content">
+              <h3>🌟 عمالة مدرّبة = راحة واطمئنان</h3>
+              <p>
+                في شركتنا، نؤمن أن العامل المحترف هو قلب الخدمة. لذلك نختار فريقنا بعناية، وندربه على أدق التفاصيل:
+              </p>
+              <ul>
+                <li><i class="bi bi-check-circle-fill"></i> طريقة حمل القطع الثقيلة</li>
+                <li><i class="bi bi-check-circle-fill"></i> كيفية تغليف الزجاجيات</li>
+                <li><i class="bi bi-check-circle-fill"></i> أسلوب التعامل الراقي مع العملاء</li>
+              </ul>
+            </div>
           </div>
-
         </div>
-
       </div>
 
     </section><!-- /Service Details Section -->
