--- a/starter-page.html
+++ b/starter-page.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Starter Page - BizLand Bootstrap Template</title>
+  <title>حور - نقل عفش الكويت | فك تركيب وتغليف 📦 66401171 - الصفحة الرئيسية</title>
   <meta name="description" content="حور لنقل العفش - أفضل خدمة نقل عفش في الكويت. نقل، فك، تركيب، وتغليف آمن بأحدث الأدوات. فريق مدرب، تغطية شاملة، تواصل معنا 66401171">
   <meta name="keywords" content="نقل عفش الكويت, نقل أثاث الكويت, فك وتركيب أثاث, شركة نقل عفش, Home Mover, تغليف عفش, نقل سريع, 66401171, نقل عفش من الباب للباب, شركة نقل موثوقة الكويت, نقل عفش رخيص, أفضل شركة نقل عفش, خدمات نقل العفش, نقل أثاث محترف, نقل مكاتب, نقل منازل, نقل أجهزة كهربائية, نقل أثاث فاخر, تغليف الأثاث, نقل معدات ثقيلة, نقل بضائع تجارية, نقل شقق صغيرة, نقل الفلل, الكويت">
   <link rel="canonical" href="https://naqlafsha-hoor.com/starter-page.html" />
@@ -83,9 +83,7 @@
 
       <div class="container position-relative d-flex align-items-center justify-content-between">
         <a href="index.html" class="logo d-flex align-items-center">
-          <!-- Uncomment the line below if you also wish to use an image logo -->
-          <!-- <img src="assets/img/logo.png" alt=""> -->
-          <h1 class="sitename">BizLand</h1>
+          <img src="assets/img/logo.png" alt="حور - نقل عفش الكويت">
         </a>
 
         <nav id="navmenu" class="navmenu">
