--- a/article-view.html
+++ b/article-view.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <!-- Enhanced Title Tag with Primary Keyword First -->
-  <title>مقالات نقل العفش | حور</title>
+  <title>حور - نقل عفش الكويت | فك تركيب وتغليف 📦 66401171 - المقالات</title>
   
   <!-- Enhanced Meta Description -->
   <meta name="description" content="مقالات ونصائح عن نقل العفش في الكويت - نصائح عملية وأفكار مفيدة لنقل آمن وسريع">
@@ -117,8 +117,7 @@
   <header id="header" class="header sticky-top" role="banner">
     <div class="container d-flex align-items-center justify-content-between">
       <a href="index.html" class="logo d-flex align-items-center">
-        <img src="assets/img/logo-rmbg.png" alt="حور لنقل العفش">
-        <h1 class="sitename">حور</h1>
+        <img src="assets/img/logo.png" alt="حور - نقل عفش الكويت">
       </a>
       <nav id="navmenu" class="navmenu">
         <ul>
