--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 <a href="assets/img/hoors/video/hoor-video-1.mp4" class="btn btn-sm btn-primary glightbox preview-link">
                   <i class="bi bi-play-circle"></i> شاهد الفيديو
                 </a>
-                <a href="portfolio-details.html?project=house1" class="btn btn-sm btn-outline-primary">
+                <a href="portfolio-house1.html" class="btn btn-sm btn-outline-primary">
                   <i class="bi bi-arrow-left"></i> التفاصيل
                 </a>
               </div>
@@ -312,7 +312,7 @@
                 <a href="assets/img/hoors/video/hoor-video-2.mp4" class="btn btn-sm btn-primary glightbox preview-link">
                   <i class="bi bi-play-circle"></i> شاهد الفيديو
                 </a>
-                <a href="portfolio-details.html?project=office1" class="btn btn-sm btn-outline-primary">
+                <a href="portfolio-office1.html" class="btn btn-sm btn-outline-primary">
                   <i class="bi bi-arrow-left"></i> التفاصيل
                 </a>
               </div>
@@ -332,7 +332,7 @@
                 <a href="assets/img/hoors/video/hoor-video-3.mp4" class="btn btn-sm btn-primary glightbox preview-link">
                   <i class="bi bi-play-circle"></i> شاهد الفيديو
                 </a>
-                <a href="portfolio-details.html?project=appliances1" class="btn btn-sm btn-outline-primary">
+                <a href="portfolio-appliances1.html" class="btn btn-sm btn-outline-primary">
                   <i class="bi bi-arrow-left"></i> التفاصيل
                 </a>
               </div>
@@ -370,7 +370,7 @@
                     class="glightbox preview-link">
                     <i class="bi bi-zoom-in"></i>
                   </a>
-                  <a href="portfolio-details.html?project=house1" 
+                  <a href="portfolio-house1.html" 
                     aria-label="تفاصيل مشروع نقل منزل"
                     class="details-link">
                     <!-- <i class="bi bi-link-45deg"></i> -->
@@ -395,7 +395,7 @@
                     class="glightbox preview-link">
                     <i class="bi bi-zoom-in"></i>
                   </a>
-                  <a href="portfolio-details.html?project=office1" 
+                  <a href="portfolio-office1.html" 
                     aria-label="تفاصيل مشروع نقل مكتب"
                     class="details-link">
                     <!-- <i class="bi bi-link-45deg"></i> -->
@@ -420,7 +420,7 @@
                     class="glightbox preview-link">
                     <i class="bi bi-zoom-in"></i>
                   </a>
-                  <a href="portfolio-details.html?project=appliances1" 
+                  <a href="portfolio-appliances1.html" 
                     aria-label="تفاصيل مشروع نقل أجهزة"
                     class="details-link">
                     <!-- <i class="bi bi-link-45deg"></i> -->
@@ -445,7 +445,7 @@
                     class="glightbox preview-link">
                     <i class="bi bi-zoom-in"></i>
                   </a>
-                  <a href="portfolio-details.html?project=luxury1" 
+                  <a href="portfolio-details.html" 
                     aria-label="تفاصيل مشروع نقل أثاث فاخر"
                     class="details-link">
                     <!-- <i class="bi bi-link-45deg"></i> -->
@@ -470,7 +470,7 @@
                     class="glightbox preview-link">
                     <i class="bi bi-zoom-in"></i>
                   </a>
-                  <a href="portfolio-details.html?project=packing1" 
+                  <a href="portfolio-details.html" 
                     aria-label="تفاصيل مشروع التغليف"
                     class="details-link">
                     <!-- <i class="bi bi-link-45deg"></i> -->
@@ -495,7 +495,7 @@
                     class="glightbox preview-link">
                     <i class="bi bi-zoom-in"></i>
                   </a>
-                  <a href="portfolio-details.html?project=heavy1" 
+                  <a href="portfolio-details.html" 
                     aria-label="تفاصيل مشروع نقل معدات"
                     class="details-link">
                     <!-- <i class="bi bi-link-45deg"></i> -->
@@ -520,7 +520,7 @@
                     class="glightbox preview-link">
                     <i class="bi bi-zoom-in"></i>
                   </a>
-                  <a href="portfolio-details.html?project=commercial1" 
+                  <a href="portfolio-details.html" 
                     aria-label="تفاصيل مشروع نقل بضائع"
                     class="details-link">
                     <!-- <i class="bi bi-link-45deg"></i> -->
@@ -545,7 +545,7 @@
                     class="glightbox preview-link">
                     <i class="bi bi-zoom-in"></i>
                   </a>
-                  <a href="portfolio-details.html?project=small-apartment" 
+                  <a href="portfolio-details.html" 
                     aria-label="تفاصيل مشروع نقل الشقق الصغيرة"
                     class="details-link">
                     <!-- <i class="bi bi-link-45deg"></i> -->
@@ -570,7 +570,7 @@
                     class="glightbox preview-link">
                     <i class="bi bi-zoom-in"></i>
                   </a>
-                  <a href="portfolio-details.html?project=villa-moving" 
+                  <a href="portfolio-details.html" 
                     aria-label="تفاصيل مشروع نقل الفلل"
                     class="details-link">
                     <!-- <i class="bi bi-link-45deg"></i> -->
@@ -702,7 +702,7 @@
                 <h4>أسرار النقل السريع للعفش</h4>
                 <span class="article-date">15 يونيو 2023</span>
                 <p>تعرف على كيفية نقل أثاثك في وقت قياسي مع الحفاظ على سلامته</p>
-                <a href="article-view.html?article=speed-moving" class="read-more" aria-label="قراءة المزيد عن النقل السريع">
+                <a href="article-speed-moving.html" class="read-more" aria-label="قراءة المزيد عن النقل السريع">
                   اقرأ المزيد <i class="bi bi-arrow-left"></i>
                 </a>
               </div>
@@ -720,7 +720,7 @@
                 <h4>دليل التغليف الآمن للأثاث</h4>
                 <span class="article-date">2 يوليو 2023</span>
                 <p>أفضل الطرق لتغليف مختلف أنواع الأثاث والأجهزة الكهربائية</p>
-                <a href="article-view.html?article=packing-guide" class="read-more" aria-label="قراءة المزيد عن تغليف الأثاث">
+                <a href="article-packing-guide.html" class="read-more" aria-label="قراءة المزيد عن تغليف الأثاث">
                   اقرأ المزيد <i class="bi bi-arrow-left"></i>
                 </a>
               </div>
@@ -738,7 +738,7 @@
                 <h4>النقل الموسمي في الكويت</h4>
                 <span class="article-date">20 أغسطس 2023</span>
                 <p>توقيتات مثالية لتجنب الحرارة والازدحام أثناء نقل الأثاث</p>
-                <a href="article-view.html?article=seasonal-moving" class="read-more" aria-label="قراءة المزيد عن النقل الموسمي">
+                <a href="article-seasonal-moving.html" class="read-more" aria-label="قراءة المزيد عن النقل الموسمي">
                   اقرأ المزيد <i class="bi bi-arrow-left"></i>
                 </a>
               </div>
@@ -756,7 +756,7 @@
                 <h4>نقل المكاتب باحترافية</h4>
                 <span class="article-date">5 سبتمبر 2023</span>
                 <p>كيف تنقل مكتبك بدون توقف العمل وخسارة الزبائن</p>
-                <a href="article-view.html?article=office-moving" class="read-more" aria-label="قراءة المزيد عن نقل المكاتب">
+                <a href="article-office-moving.html" class="read-more" aria-label="قراءة المزيد عن نقل المكاتب">
                   اقرأ المزيد <i class="bi bi-arrow-left"></i>
                 </a>
               </div>
