--- a/article-packing-guide.html
+++ b/article-packing-guide.html
@@ -267,6 +267,63 @@
         </div>
       </div>
     </section>
+
+    <!-- Related Portfolio Section -->
+    <section class="related-portfolio" dir="rtl">
+      <div class="container">
+        <div class="row text-center mb-5">
+          <div class="col-12">
+            <h2 class="fade-in-up">أعمالنا ذات الصلة</h2>
+            <p class="fade-in-up">شاهد كيف نطبق هذه النصائح في مشاريعنا</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 col-md-6">
+            <div class="portfolio-card fade-in-up">
+              <div class="portfolio-image">
+                <img src="assets/img/hoors/img/video-1-cover.png" alt="تغليف أثاث فاخر" loading="lazy">
+              </div>
+              <div class="portfolio-content">
+                <h4>تغليف أثاث فاخر</h4>
+                <p>خدمة تغليف أثاث فاخر باحترافية مع مواد عالية الجودة</p>
+                <a href="portfolio-house1.html" class="btn-view-project">
+                  عرض المشروع <i class="bi bi-arrow-left"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="portfolio-card fade-in-up">
+              <div class="portfolio-image">
+                <img src="assets/img/hoors/img/video-2-cover.png" alt="فك وتركيب باحتراف" loading="lazy">
+              </div>
+              <div class="portfolio-content">
+                <h4>فك وتركيب باحتراف</h4>
+                <p>فك وتركيب الأثاث بأدوات متخصصة وفريق مدرب</p>
+                <a href="portfolio-office1.html" class="btn-view-project">
+                  عرض المشروع <i class="bi bi-arrow-left"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="portfolio-card fade-in-up">
+              <div class="portfolio-image">
+                <img src="assets/img/hoors/img/video-3-cover.png" alt="سيارات مبطنة ومجهزة" loading="lazy">
+              </div>
+              <div class="portfolio-content">
+                <h4>سيارات مبطنة ومجهزة</h4>
+                <p>سيارات نقل مجهزة خصيصًا لحماية الأثاث أثناء النقل</p>
+                <a href="portfolio-appliances1.html" class="btn-view-project">
+                  عرض المشروع <i class="bi bi-arrow-left"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </main>
 
   <!-- Footer -->
