--- a/old-index.html
+++ b/old-index.html
@@ -302,7 +302,7 @@
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200" dir="rtl">
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/hoors/img/hoor2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/hoors/img/hoor2.jpg" class="img-fluid" alt="فريق حور ينقل أثاث منزل في الكويت">
               <div class="portfolio-info" >
                 <h4>نقل</h4>
                 <p>تبي تنقل عفشتك؟ لا تشيل هم ، احنا نهتم بكل شي</p>
@@ -312,7 +312,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/hoors/img/hoor3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/hoors/img/hoor3.jpg" class="img-fluid" alt="خدمة نقل عفش من الباب للباب في الكويت">
               <div class="portfolio-info">
                 <h4>خدمتك راحتنا</h4>
                 <p>خدمتك راحتنا .. دق علينا واثاثك يوصل بامان</p>
@@ -322,7 +322,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/hoors/img/hoor5.jpg" class="img-fluid" alt="">
+              <img src="assets/img/hoors/img/hoor5.jpg" class="img-fluid" alt="نقل أثاث آمن بدون كسر أو تلف في الكويت">
               <div class="portfolio-info">
                 <h4>عفشك يوصل بلا ولا كسر</h4>
                 <p>معانا، عفشك يوصل بلا ولا كسر .. دق علينا وباقي الشغلة علينا!</p>
@@ -332,7 +332,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/hoors/img/hoor6.jpg" class="img-fluid" alt="">
+              <img src="assets/img/hoors/img/hoor6.jpg" class="img-fluid" alt="خدمة نقل أثاث سريعة وآمنة في الكويت">
               <div class="portfolio-info">
                 <h4>نقل الاثاث</h4>
                 <p>نقل اثاثك اصبح اسهل مما تتخيل دقة ، سرعة ، امان!</p>
@@ -342,7 +342,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/hoors/img/hoor7.jpg" class="img-fluid" alt="">
+              <img src="assets/img/hoors/img/hoor7.jpg" class="img-fluid" alt="نقل عفش من الباب للباب بأمان في الكويت">
               <div class="portfolio-info">
                 <h4>من الباب للباب</h4>
                 <p>من الباب للباب .. اثاثك في ايد امينة</p>
@@ -352,7 +352,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/hoors/img/hoor8.jpg" class="img-fluid" alt="">
+              <img src="assets/img/hoors/img/hoor8.jpg" class="img-fluid" alt="خدمة نقل عفش احترافية بأسعار تنافسية في الكويت">
               <div class="portfolio-info">
                 <h4>احترافية</h4>
                 <p>خدمة احترافية لنقل اثاثك باسعار تنافسية</p>
@@ -362,7 +362,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/hoors/img/hoor9.jpg" class="img-fluid" alt="">
+              <img src="assets/img/hoors/img/hoor9.jpg" class="img-fluid" alt="فريق حور ذو خبرة في نقل الأثاث في الكويت">
               <div class="portfolio-info">
                 <h4>خبرة</h4>
                 <p>خبرة في نقل الاثاث .. نصل اليك في اسرع وقت !</p>
@@ -372,7 +372,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/hoors/img/hoor10.jpg" class="img-fluid" alt="">
+              <img src="assets/img/hoors/img/hoor10.jpg" class="img-fluid" alt="نقل عفش مضمون من الباب للباب في الكويت">
               <div class="portfolio-info">
                 <h4>نقل عفش</h4>
                 <p>نقل عفش مضمون .. من الباب للباب واثاثك بامان</p>
@@ -382,7 +382,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/hoors/img/hoor11.jpg" class="img-fluid" alt="">
+              <img src="assets/img/hoors/img/hoor11.jpg" class="img-fluid" alt="خدمة نقل شاملة من المنزل للمكتب والمخازن في الكويت">
               <div class="portfolio-info">
                 <h4>من بيتك لمكتبك .. من مخلك الي مخزنك .. نننقل لك كل ما تحتاجه!</h4>
                 <p>Lorem ipsum, dolor sit</p>
@@ -392,7 +392,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/hoors/img/hoor12.jpg" class="img-fluid" alt="">
+              <img src="assets/img/hoors/img/hoor12.jpg" class="img-fluid" alt="نقل عفش وبضائع وأجهزة ومعدات في الكويت">
               <div class="portfolio-info">
                 <h4>نقل اي شي تبيه</h4>
                 <p>نقل اي شي تبيه .. عفش ، بضائع ، اجهزة ، معدات</p>
@@ -402,7 +402,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/hoors/img/hoor13.jpg" class="img-fluid" alt="">
+              <img src="assets/img/hoors/img/hoor13.jpg" class="img-fluid" alt="خدمة نقل عفش سهلة ومريحة في الكويت">
               <div class="portfolio-info">
                 <h4>لا تفكر وايد</h4>
                 <p>لا تفكر وايد .. دق علينا وخلك مرتاح</p>
@@ -412,7 +412,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/hoors/img/hoor14.jpg" class="img-fluid" alt="">
+              <img src="assets/img/hoors/img/hoor14.jpg" class="img-fluid" alt="خدمة نقل عفش شاملة مع حماية كاملة في الكويت">
               <div class="portfolio-info">
                 <h4>راحة بالك تبدا معنا</h4>
                 <p>راحة بالك تبدا معنا .. نقل ، توزيعات حصرية ، وحماية كاملة لكل قطعة</p>
@@ -422,7 +422,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/hoors/img/hoor16.jpg" class="img-fluid" alt="">
+              <img src="assets/img/hoors/img/hoor16.jpg" class="img-fluid" alt="نقل عفش منازل ومكاتب بخبرة عالية في الكويت">
               <div class="portfolio-info">
                 <h4>نقل عفش منازل وكاتب</h4>
                 <p>نقل عفش منازل ومكاتب .. بخبرة وسرعة وجودة عالية</p>
@@ -432,7 +432,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/hoors/img/hoor17.jpg" class="img-fluid" alt="">
+              <img src="assets/img/hoors/img/hoor17.jpg" class="img-fluid" alt="خدمة نقل أثاث شاملة مع فك وتغليف وتركيب في الكويت">
               <div class="portfolio-info">
                 <h4>خليك مطمن</h4>
                 <p>وفرنالك خدمة نقل اثاث شاملة تشمل ، فك، تغليف، نقل، تركيب</p>
@@ -442,7 +442,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/hoors/img/hoor18.jpg" class="img-fluid" alt="">
+              <img src="assets/img/hoors/img/hoor18.jpg" class="img-fluid" alt="سيارات نقل عفش مجهزة مع نظام تثبيت متطور في الكويت">
               <div class="portfolio-info">
                 <h4>سيارات مجهزة</h4>
                 <p>فريق النقل يوفرلك سيارة مجهزة ، ترتيب ، تقبيت ، حماية ، فريق جاهز يشيل كل قطعة بامان</p>
@@ -452,7 +452,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/hoors/img/hoor19.jpg" class="img-fluid" alt="">
+              <img src="assets/img/hoors/img/hoor19.jpg" class="img-fluid" alt="نقل عفش من الباب للباب بأمان في الكويت">
               <div class="portfolio-info">
                 <h4>من باب بيتك لباب بيتك الجديد</h4>
                 <p>من باب بيتك لباب بيتك الجديد .. ننقلك كل قطعة بامان</p>
@@ -462,7 +462,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/hoors/img/hoor20.jpg" class="img-fluid" alt="">
+              <img src="assets/img/hoors/img/hoor20.jpg" class="img-fluid" alt="خدمة نقل عفش بدقة والتزام في المواعيد في الكويت">
               <div class="portfolio-info">
                 <h4>دقة في النقل</h4>
                 <p>دقة في النقل ، الترتيب في البروتوكول ، والتزام في الوقت</p>
@@ -472,7 +472,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/hoors/img/hoor21.jpg" class="img-fluid" alt="">
+              <img src="assets/img/hoors/img/hoor21.jpg" class="img-fluid" alt="نقل أجهزة كهربائية بأمان من الباب للباب في الكويت">
               <div class="portfolio-info">
                 <h4>السلامة</h4>
                 <p>معانا ، اجهزتك الكهربائية توصل سليمة من باب بيتك لباب بيتك الجديد</p>
@@ -482,7 +482,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/hoors/img/hoor22.jpg" class="img-fluid" alt="">
+              <img src="assets/img/hoors/img/hoor22.jpg" class="img-fluid" alt="فريق حور مدرب لنقل الأثاث بأمان في الكويت">
               <div class="portfolio-info">
                 <h4>فريقنا مدربين ننقل لك اثاث وانت مرتاح</h4>
                 <p>فريقنا مدربين ننقل لك اثاث وانت مرتاح نحط كل قطعة في مكانها</p>
@@ -492,7 +492,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/hoors/img/hoor23.jpg" class="img-fluid" alt="">
+              <img src="assets/img/hoors/img/hoor23.jpg" class="img-fluid" alt="نقل عفش وبضائع وأغراض خدمة كاملة في الكويت">
               <div class="portfolio-info">
                 <h4>نقل عفش وبضائع واغراض</h4>
                 <p>نقل عفش وبضائع واغراض ، خدمة كاملة بدون تعب</p>
@@ -502,7 +502,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/hoors/img/hoor24.jpg" class="img-fluid" alt="">
+              <img src="assets/img/hoors/img/hoor24.jpg" class="img-fluid" alt="نقل سريع بضائع وأثاث مكتبي توصيل مضمون في الكويت">
               <div class="portfolio-info">
                 <h4>السرعة</h4>
                 <p>نقل سريع ، بضائع ، اثا مكتبي ، توصيل مضمون لاي مكان</p>
@@ -512,7 +512,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/hoors/img/hoor25.jpg" class="img-fluid" alt="">
+              <img src="assets/img/hoors/img/hoor25.jpg" class="img-fluid" alt="نقل عفش وبضائع وأجهزة خدمة شاملة في الكويت">
               <div class="portfolio-info">
                 <h4>نقل اي شي تبيه</h4>
                 <p>نقل اي شي تبيه .. عفش ، بضائع ، اجهزة</p>
@@ -522,7 +522,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/hoors/img/hoor26.jpg" class="img-fluid" alt="">
+              <img src="assets/img/hoors/img/hoor26.jpg" class="img-fluid" alt="معانا ، ماكو شي بعيد او ثقيل .. ننقل لك كل شي بامان كامل">
               <div class="portfolio-info">
                 <h4>ماكوشي بعيد او ثقيل</h4>
                 <p>معانا ، ماكو شي بعيد او ثقيل .. ننقل لك كل شي بامان كامل</p>
@@ -532,7 +532,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/hoors/img/hoor27.jpg" class="img-fluid" alt="">
+              <img src="assets/img/hoors/img/hoor27.jpg" class="img-fluid" alt="نوصله بامان بدون خدوش ولا تاخير دق علينا اليوم وخليك مرتاح">
               <div class="portfolio-info">
                 <h4>نوصله بامان بدون خدوش</h4>
                 <p>نوصله بامان بدون خدوش ولا تاخير دق علينا اليوم وخليك مرتاح</p>
@@ -542,7 +542,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/hoors/img/hoor28.jpg" class="img-fluid" alt="">
+              <img src="assets/img/hoors/img/hoor28.jpg" class="img-fluid" alt="نقدم لكم خدمات نقل اثاث المنازل باعلي معايير الجودة والامان">
               <div class="portfolio-info">
                 <h4>الامان</h4>
                 <p>نقدم لكم خدمات نقل اثاث المنازل باعلي معايير الجودة والامان</p>
@@ -552,7 +552,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/hoors/img/hoor29.jpg" class="img-fluid" alt="">
+              <img src="assets/img/hoors/img/hoor29.jpg" class="img-fluid" alt="معانا ، عفشك يوصل بلا ولا كسر .. دق علينا وباقي الشغلة علينا">
               <div class="portfolio-info">
                 <h4>بلا ولا كسر </h4>
                 <p>معانا ، عفشك يوصل بلا ولا كسر .. دق علينا وباقي الشغلة علينا</p>
@@ -562,7 +562,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/hoors/img/hoor30.jpg" class="img-fluid" alt="">
+              <img src="assets/img/hoors/img/hoor30.jpg" class="img-fluid" alt="نقل عفش من الباب للباب بأمان في الكويت">
               <div class="portfolio-info">
                 <h4>نقل عفش من الباب للباب</h4>
                 <p>نقل عفش من الباب للباب .. سيارات موثوقة وفريق محترف</p>
