--- a/portfolio-appliances1.html
+++ b/portfolio-appliances1.html
@@ -143,7 +143,7 @@
   </header>
 
   <!-- Breadcrumb Navigation -->
-  <nav aria-label="breadcrumb" class="breadcrumb-nav" dir="rtl">
+  <!-- <nav aria-label="breadcrumb" class="breadcrumb-nav" dir="rtl">
     <div class="container">
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="index.html">الرئيسية</a></li>
@@ -151,7 +151,7 @@
         <li class="breadcrumb-item active" aria-current="page">سيارات مبطنة ومجهزة</li>
       </ol>
     </div>
-  </nav>
+  </nav> -->
 
   <main id="main">
     <!-- Story Hero Section -->
