--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>نقل عفش الكويت | Home Mover | فك تركيب وتغليف 📦 66401171</title>
   
   <!-- Enhanced Meta Description -->
-  <meta name="description" content="أفضل خدمة نقل عفش في الكويت 🚛 فك وتركيب الأثاث، تغليف آمن، ونقل سريع لجميع مناطق الكويت. فريق محترف وسيارات مجهزة. اتصل الآن 66401171">
+  <meta name="description" content="هل تبحث عن شركة موثوقة لـ نقل عفش الكويت؟ نقدم خدمات نقل الأثاث، فك وتركيب وتغليف بأسعار مناسبة وخدمة ممتازة في جميع مناطق الكويت. ">
   
   <!-- Expanded Keywords List -->
   <meta name="keywords" content="نقل عفش الكويت, نقل أثاث الكويت, فك وتركيب أثاث, شركة نقل عفش, Home Mover, تغليف عفش, نقل سريع, 66401171, نقل عفش من الباب للباب, شركة نقل موثوقة الكويت, نقل عفش رخيص, أفضل شركة نقل عفش">
@@ -154,29 +154,6 @@
       </div>
 
     </section><!-- /Hero Section -->
-
-    <!-- Social Media Floating Buttons -->
-    <!-- <div class="social-media" aria-label="وسائل التواصل الاجتماعي">
-      <a href="https://www.instagram.com/naqlafsha_hoor/" aria-label="انستجرام">
-        <div class="social-btn color-instagram">
-          <i class="bi bi-instagram"></i>
-          <p class="order-1 google-font margin-instagram">الانستجرام</p>
-        </div>
-      </a>
-      <a href="https://wa.me/96566401171" aria-label="واتساب">
-        <div class="social-btn color-whatsapp">
-          <i class="bi bi-whatsapp"></i>
-          <p class="order-1 google-font margin-instagram">واتساب</p>
-        </div>
-      </a>
-      <a href="tel:+96566401171" aria-label="اتصل بنا">
-        <div class="social-btn color-telegram">
-          <i class="bi bi-telephone"></i>
-          <p class="order-1 google-font margin-instagram">اتصل بنا</p>
-        </div>
-      </a>
-    </div> -->
-
     <!-- About Section -->
     <section id="about" class="about section light-background" aria-labelledby="about-heading"  dir="rtl">
 
